// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VAlert.vue should be closed by default 1`] = `

<div class="v-alert error"
     style="display: none;"
>
  <div>
  </div>
</div>

`;

exports[`VAlert.vue should be dismissible 1`] = `

<div class="v-alert error"
     style="display: none;"
>
  <div>
  </div>
  <a class="v-alert__dismissible">
    <i aria-hidden="true"
       class="v-icon v-icon--right material-icons"
    >
      cancel
    </i>
  </a>
</div>

`;

exports[`VAlert.vue should have a close icon 1`] = `

<div class="v-alert error"
     style="display: none;"
>
  <div>
  </div>
  <a class="v-alert__dismissible">
    <i aria-hidden="true"
       class="v-icon v-icon--right material-icons"
    >
      cancel
    </i>
  </a>
</div>

`;
